buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
    }
}

apply plugin: 'com.github.ben-manes.versions'
apply plugin: "java"
apply plugin: "idea"

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.0'

    compile 'com.google.code.gson:gson:2.8.5'
    compile 'com.squareup.moshi:moshi:1.6.0'
    compile 'io.reactivex.rxjava2:rxjava:2.1.16'

    testCompile 'junit:junit:4.12'
    testCompile 'org.assertj:assertj-core:3.10.0'
    testCompile 'org.mockito:mockito-core:2.19.1'
    testCompile "pl.pragmatists:JUnitParams:1.1.1"

}

tasks.withType(JavaCompile) {
    //options.compilerArgs += [ '-Xep:DeadException:WARN', '-Xep:GuardedByValidator:OFF' ]
}

sourceCompatibility = '10'
targetCompatibility = '10'
